feat: Swagger 설정에 인증 추가, extractAuthorities 수정