@@ -6,6 +6,7 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -18,7 +19,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -80,12 +81,11 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
      * JWT에서 사용자 역할(ROLE) 추출
      */
     private List<GrantedAuthority> extractAuthorities(Jwt jwt) {
-        List<String> roles = jwt.getClaim("roles");
-        if (roles == null) {
-            return Collections.emptyList();
-        }
-        return roles.stream()
-                .map(role -> "ROLE_" + role)
+        String rolesString = jwt.getClaim("roles"); // ADMIN,USER
+
+        return StringUtils.isBlank(rolesString) ? List.of()
+                : Arrays.stream(rolesString.split(","))
+                .map(String::trim)
                 .map(SimpleGrantedAuthority::new)
                 .collect(Collectors.toList());
     }
